[tool.poetry]
name = "PhotoScanner"
version = "0.2.4"
description = "A simple tool to digitalize printed photos using a greenscreen and a DSLR."
authors = ["Florian Vahl <florian@flova.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Flova/PhotoScanner"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.4.0"
numpy = "^1.19.1"
imutils = "^0.5.3"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
photoscanner = "photoscanner.main:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
